# DockLens

./: .env.example  .gitignore  Dockerfile.client  Makefile  README.md  docker_monitor.db  docker_monitor.db.bkp  pyproject.toml
agent/: config.py  main.py
agent/modules/: containers.py  hosts.py
app/: main.py
app/config/: database.py
app/models/: containers_model.py  cpu_model.py  hosts_model.py
app/routers/: containers.py
app/routers/api/: containers.py  hosts.py
app/routers/web/: dashboard.py
app/schemas/: containers_schema.py  cpu_schema.py  hosts_schema.py
app/utils/: telegram_notifier.py
templates/: base.html  containers.html  index.html  template.html
templates/components/: cpu.html  footer.html  sidebar.html  topbar.html
templates/components/agents/: table.html
templates/components/containers/: table.html
